# packit

./: .gitignore  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  requirements.txt  setup.cfg  setup.py  tox.ini
bigtests/: assert.sh  test.sh
bigtests/version/: temp-run.sh  temp-test-run.py
bigtests/version/file/: run.sh  setup.cfg  setup.py
bigtests/version/git-invalid/: git  run.sh  setup.cfg
bigtests/version/git-non-release/: git  run.sh  setup.py
bigtests/version/git-release/: git  run.sh  setup.cfg  setup.py
bigtests/version/packaged/: PKG-INFO  git  run.sh  setup.py
bigtests/version/shell/: run.sh  setup.cfg  setup.py
packman/: __init__.py  core.py  hooks.py
packman/config/: __init__.py  base.py  dependencies.py  extra_files.py  license.py  metadata.py  packages.py
packman/config/version/: __init__.py  fixed.py  git_pep440.py  shell.py
packman/utils/: registry.py
src/packit/: additional_files.py  core.py  hooks.py  utils.py
src/packit/commands/: packit_test.py
src/packit/config/: __init__.py  auto_description.py  auto_tests.py  base.py  dependencies.py  description.py  extra_files.py  extra_meta.py  license.py  packages.py
src/packit/config/version/: __init__.py  composite.py  file.py  fixed.py  git_pep440.py  shell.py
src/packit/utils/pytest/: gitignore.py
src/packman/: core.py  hooks.py
src/packman/commands/: packman_test.py
src/packman/config/: __init__.py  auto_tests.py
wrap/: core.py  hooks.py
wrap/config/: __init__.py  _metadata.py  packages.py
wrap/config/license/: __init__.py
wrap/config/version/: __init__.py
