[global]
setup_hooks =
    packit.core.patch_pbr

[metadata]
name = packit
license = NCBI license
requires-python = >=2.6

classifier =
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 2
        Programming Language :: Python :: 2.6
        Programming Language :: Python :: 2.7
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.3
        Programming Language :: Python :: 3.4

[files]
packages_root = src

[entry_points]
distutils.setup_keywords =
    packit = packit.core:packit

setuptools.file_finders =
    packit_extra_files = packit.additional_files:list_files

[bdist_wheel]
universal = 1